@@ -1,24 +1,25 @@
 package com.zip.community.platform.adapter.out;
 
-import com.zip.community.platform.adapter.out.redis.board.BoardRedisHash;
-import com.zip.community.platform.adapter.out.redis.board.BoardRedisRepository;
+import com.zip.community.platform.adapter.out.redis.board.temp.TempBoardRedisHash;
+import com.zip.community.platform.adapter.out.redis.board.temp.TempBoardRedisRepository;
 import com.zip.community.platform.application.port.out.board.TempBoardPort;
 import com.zip.community.platform.domain.board.Board;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class BoardTempPersistenceAdapter implements TempBoardPort {
 
-    private final BoardRedisRepository redisRepository;
+    private final TempBoardRedisRepository redisRepository;
 
     /// Save 관련 구현체
     @Override
     public Board saveTempBoard(Board board) {
-        BoardRedisHash hash = BoardRedisHash.from(board);
+        TempBoardRedisHash hash = TempBoardRedisHash.from(board);
 
         // 레디스에 값 저장하기
         return redisRepository.save(hash)
@@ -31,20 +32,25 @@ public class BoardTempPersistenceAdapter implements TempBoardPort {
     public Optional<Board> getTempBoard(Long userId, int index) {
 
         // 리스트 조회
-        List<BoardRedisHash> list = redisRepository.findByMemberId(userId);
+        List<Board> list = redisRepository.findByMemberId(userId)
+                .stream().map(TempBoardRedisHash::toDomain)
+                .sorted(Comparator.comparing(Board::getUpdatedAt))
+                .collect(Collectors.toList());
 
         // 인덱스를 통해서 특정 글 가져오기
-        BoardRedisHash redisHash = list.get(index - 1);
+        Board board = list.get(index - 1);
 
-        return Optional.of(redisHash.toDomain());
+        return Optional.of(board);
     }
 
     @Override
     public List<Board> getTempBoards(Long userId) {
 
-        return redisRepository.findByMemberId(userId).stream()
-                .map(BoardRedisHash::toDomain)
-                .toList();
+        // 리스트 조회 후 가변 리스트로 변환하여 정렬
+        return redisRepository.findByMemberId(userId)
+                .stream().map(TempBoardRedisHash::toDomain)
+                .sorted(Comparator.comparing(Board::getUpdatedAt))
+                .collect(Collectors.toList());
     }
 
     /// Delete 관련 구현체
@@ -52,12 +58,15 @@ public class BoardTempPersistenceAdapter implements TempBoardPort {
     public void deleteTempBoard(Long userId, int index) {
 
         // 리스트 조회
-        List<BoardRedisHash> list = redisRepository.findByMemberId(userId);
+        List<Board> list = redisRepository.findByMemberId(userId)
+                .stream().map(TempBoardRedisHash::toDomain)
+                .sorted(Comparator.comparing(Board::getUpdatedAt))
+                .collect(Collectors.toList());
 
         // 인덱스를 통해서 특정 글 가져오기
-        BoardRedisHash redisHash = list.get(index - 1);
+        Board board = list.get(index - 1);
 
-        redisRepository.delete(redisHash);
+        redisRepository.deleteById(board.getId());
 
     }
 }
